<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/font_splash"
    android:orientation="vertical"
    tools:context="com.fpg.fpg.ui.onBoarding.SplashActivity">


    <ImageView
        android:id="@+id/iv_logo_app"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_escudo"
        android:scaleType="fitXY"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_app">

        <TextView
            android:id="@+id/tv_college"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/splash_title_college"
            android:textAlignment="center"
            android:textColor="@color/color_title_white"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/tv_institute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/splash_title_institute"
            android:textAlignment="center"
            android:textColor="@color/color_title_blue_sky"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_schools"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_title">

        <TextView
            android:id="@+id/tv_title_preschool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_title_preschool"
            android:textAlignment="center"
            android:textColor="@color/color_title_white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_title_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/splash_title_primary"
            android:textAlignment="center"
            android:textColor="@color/color_title_blue_sky"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tv_title_high_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/splash_title_high_school"
            android:textAlignment="center"
            android:textColor="@color/color_title_white"
            android:textSize="30sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tv_title_name_app"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_loading"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/colorWhite"
            app:lottie_fileName="Splash/loading.json"
            app:lottie_loop="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_title_name_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-184dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tv_version_app"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="534dp" />

    <TextView
        android:id="@+id/tv_version_app"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_conversion_absoluteHeight="16dp"
        tools:layout_conversion_absoluteWidth="384dp"
        tools:layout_conversion_absoluteX="0dp"
        tools:layout_conversion_absoluteY="550dp" />


</android.support.constraint.ConstraintLayout>
